--- a/asset/style.css
+++ b/asset/style.css
@@ -19,21 +19,35 @@
   align-items: stretch;
 
   user-select: none;
+
+  background-color: #00000080;
+
+  z-index: 5;
 }
 
-.wc-app-header{
-  flex: 0 0 40px;
-  height: 40px;
+.wc-app-tools{
+  flex: 0 0 auto;
+  min-height: 40px;
   display: flex;
 }
 .wc-app-footer{
   flex: 0 0 40px;
   height: 40px;
-  display: flex;
+  
 }
 .wc-app-body{
   flex: 1 1 auto;;
   touch-action: none;
+}
+
+
+/* 상세 */
+.wc-app-tools{
+  display: flex;
+  gap: 4px;
+  flex-wrap: wrap;
+  padding:4px;
+  background-color: #fff;
 }
 
 
@@ -42,6 +56,7 @@
 
 .wc-app-body{
   position: relative;
+  background-color: #000;
  
 }
 .wc-frame{
@@ -52,11 +67,37 @@
   bottom: 0;
   overflow: scroll;
   scrollbar-width: thin; /* 스크롤바 두께: auto | thin | none */
-  scrollbar-color: #eee #333; /* 핸들 색상과 트랙 배경색 */
+  scrollbar-color: #333 #eee; /* 핸들 색상과 트랙 배경색 */
+  touch-action: none;
+  scrollbar-gutter: stable both-edges;
+  background-image: url(bg.gif);
 }
 
 .wc-frame > .wc-document{
   margin:50svh 50svw;
+  outline:4px dashed #000;
 }
 
 
+
+
+
+.wc-app-modal-btns{
+  display: flex;
+  gap: 4px;
+  padding: 4px;
+}
+
+
+
+.wc-app-preview-layers{
+  display: flex;
+  flex-direction: column;
+  padding: 4px;
+  gap: 4px;
+}
+.wc-app-preview-layers .preview-layers{
+  display: flex;
+  padding:4px; 
+  gap: 4px;;
+}
