--- a/asset/style.css
+++ b/asset/style.css
@@ -25,11 +25,7 @@
   z-index: 5;
 }
 
-.wc-app-tools{
-  flex: 0 0 auto;
-  min-height: 40px;
-  display: flex;
-}
+
 .wc-app-footer{
   flex: 0 0 40px;
   height: 40px;
@@ -41,16 +37,44 @@
 }
 
 
-/* 상세 */
-.wc-app-tools{
-  display: flex;
-  gap: 4px;
-  flex-wrap: wrap;
-  padding:4px;
-  background-color: #fff;
+
+.wc-app-nav{
+  position: fixed;
+  top:0; left:0;right:0;
+  z-index: 10;
+  pointer-events: none;
+  overflow: hidden;
 }
 
 
+/* 상세 */
+.wc-app-nav-menu{
+  width: max-content;
+  border-radius: 0 0 5px 5px;
+  background-color: #00000030;
+}
+.wc-app-nav-menu > *{
+  pointer-events: all;
+}
+.wc-app-nav-tools{
+  margin-top: 4px;
+  background-color: #ffffff50;
+  width: max-content;
+  border-radius: 5px;
+  max-width: 100vw;
+}
+.wc-app-nav-tools > *{
+  pointer-events: all;
+}
+
+.wc-app-nav-tools{
+  transform: scaleY(0);
+  transform-origin: top center;
+  transition: transform 0.3s ease ;
+}
+.wc-app.show-wc-app-nav-tools .wc-app-nav-tools{
+  transform: scaleY(1);
+}
 
 
 
@@ -74,7 +98,7 @@
 }
 
 .wc-frame > .wc-document{
-  margin:50svh 50svw;
+  margin:100svh 100svw;
   outline:4px dashed #000;
   background-image: url(bg.gif);
 }
