--- a/asset/style.css
+++ b/asset/style.css
@@ -26,11 +26,7 @@
 }
 
 
-.wc-app-footer{
-  flex: 0 0 40px;
-  height: 40px;
-  
-}
+
 .wc-app-body{
   flex: 1 1 auto;;
   touch-action: none;
@@ -38,7 +34,7 @@
 
 
 
-.wc-app-nav{
+.wc-app-header{
   position: fixed;
   top:0; left:0;right:0;
   z-index: 10;
@@ -46,33 +42,42 @@
   overflow: hidden;
 }
 
+.wc-app-footer{
+  position: fixed;
+  top:0; left:0;right:0;
+  z-index: 10;
+  pointer-events: none;
+  overflow: hidden;
+  
+}
+
 
 /* 상세 */
-.wc-app-nav-menu{
+.wc-app-nav{
   width: max-content;
   border-radius: 0 0 5px 5px;
-  background-color: #00000030;
+  background-color: #000000ff;
 }
-.wc-app-nav-menu > *{
+.wc-app-nav > *{
   pointer-events: all;
 }
-.wc-app-nav-tools{
+.wc-app-tools{
   margin-top: 4px;
-  background-color: #ffffff50;
+  background-color: #ffffffff;
   width: max-content;
   border-radius: 5px;
   max-width: 100vw;
 }
-.wc-app-nav-tools > *{
+.wc-app-tools > *{
   pointer-events: all;
 }
 
-.wc-app-nav-tools{
+.wc-app-tools{
   transform: scaleY(0);
   transform-origin: top center;
   transition: transform 0.3s ease ;
 }
-.wc-app.show-wc-app-nav-tools .wc-app-nav-tools{
+.wc-app.show-wc-app-tools .wc-app-tools{
   transform: scaleY(1);
 }
 
@@ -115,7 +120,7 @@
 
 
 
-.wc-app-preview-layers{
+/* .wc-app-preview-layers{
   display: flex;
   flex-direction: column;
   padding: 4px;
@@ -125,4 +130,32 @@
   display: flex;
   padding:4px; 
   gap: 4px;;
+} */
+
+
+.layer-box{
+  border:1px dashed #eee;
+}
+.layer-box.active{
+  border:1px dashed #333;
+}
+.layer-box-preview canvas{
+  display: block;
+  margin:4px;
+  max-height: 3em;
+  max-width: 3em;
+  object-fit: contain;
+}
+.layer-box[data-wc-visible='true'] .on-visible,
+.layer-box[data-wc-visible='false'] .no-visible{
+  display: block;
+}
+.layer-box[data-wc-visible='false'] .on-visible,
+.layer-box[data-wc-visible='true'] .no-visible{
+  display: none;
+}
+.layer-box-eye{
+  font-size: 2rem;
+  width: 50px;
+  padding:4px;
 }
