--- a/asset/style.css
+++ b/asset/style.css
@@ -64,7 +64,7 @@
 .wc-app-tools{
   margin-top: 4px;
   background-color: #ffffffff;
-  width: max-content;
+  /* width: max-content; */
   border-radius: 5px;
   max-width: 100vw;
 }
