ui-input-stepper 적용중

--- a/asset/style.css
+++ b/asset/style.css
@@ -213,7 +213,9 @@
 
 
 /* Modals */
-
+.modals , .modals input{
+  touch-action: none;
+}
 
 .modal:where(#modal-layers,#modal-layer-config,#modal-document-config) > .modal-dialog{
   align-items: flex-end;
