wc-app-menu-tools

--- a/asset/style.css
+++ b/asset/style.css
@@ -74,7 +74,7 @@
 }
 
 .wc-app-menu-tools{
-  margin-top: 4px;
+  /* margin-top: 4px; */
   background-color: #ffffffff;
   width: max-content;
   border-radius: 5px;
