--- a/asset/style.css
+++ b/asset/style.css
@@ -126,6 +126,7 @@
 .wc-app[data-tool="Move"] .only-shown-tool-Move{display: block;}
 .wc-app[data-tool="Hand"] .only-shown-tool-Hand{display: block;}
 .wc-app[data-tool="Transform"] .only-shown-tool-Transform{display: block;}
+.wc-app[data-tool="Spuit"] .only-shown-tool-Spuit{display: block;}
 
 
 
