--- a/asset/style.css
+++ b/asset/style.css
@@ -297,6 +297,15 @@
 
 
 
+.grid-auto-fit-260px{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+}
+.grid-auto-fit-260px > hr{
+  grid-column: 1 / -1;
+}
+
+
 
 
 
