브러시 개선, 압력 감지 처리 개선, 마지막 동작 개선

--- a/asset/style.css
+++ b/asset/style.css
@@ -351,3 +351,16 @@
 .wc-app[data-tool-enable="false"] .only-display-tool-enable{
   display: none;
 }
+
+
+
+
+
+
+
+
+
+.brush-preview-canvas{
+  width: 100%;
+  height: 100%;
+}
