--- a/asset/style.css
+++ b/asset/style.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
+
 .debug-box{
   outline: dashed 1px #f003;
   outline-offset: -1px;
