레이어 kind의 아이콘

--- a/asset/style.css
+++ b/asset/style.css
@@ -259,6 +259,14 @@
   padding:4px;
 }
 
+.layer-kind{
+  display: none;
+}
+.layer-box[data-kind="normal"] .layer-kind[data-kind="normal"],
+.layer-box[data-kind="text"] .layer-kind[data-kind="text"]{
+  display: block;
+
+}
 
 
 
