--- a/asset/style.css
+++ b/asset/style.css
@@ -436,7 +436,7 @@
 }
 .text-frame-inner{
   width:100%;height: 100%;
-  contain: strict;
+  /* contain: strict; */
 }
 .text-frame .content{
   width: 100%;
