--- a/asset/style.css
+++ b/asset/style.css
@@ -125,6 +125,7 @@
 .wc-app[data-tool="Text"] .only-hidden-tool-Text{display: none;}
 .wc-app[data-tool="Rectangle"] .only-shown-tool-Rectangle{display: block;}
 .wc-app[data-tool="Polygon"] .only-shown-tool-Polygon{display: block;}
+.wc-app[data-tool="Star"] .only-shown-tool-Star{display: block;}
 
 body[data-fullscreen="true"] .only-shown-fullscreen-true{display: block;}
 body:not([data-fullscreen]) .only-shown-fullscreen-false{display: block;}
